<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DecodeWindow</class>
 <widget class="QMainWindow" name="DecodeWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>600</width>
    <height>550</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>LSB Steganography - Decode</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QMainWindow {
    background-color: #282a36;
}

QLabel {
    color: #f8f8f2;
    font-size: 14px;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 10px;
    margin-bottom: 5px;
}

QLineEdit {
    background-color: #44475a;
    color: #f8f8f2;
    border: 1px solid #6272a4;
    border-radius: 5px;
    padding: 5px;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 5px;
    margin-bottom: 10px;
    font-size: 14px;
}


QPushButton {
    background-color: #6272a4;
    color: #f8f8f2;
    border: none;
    border-radius: 5px;
    padding: 10px;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 5px;
    margin-bottom: 10px;
    font-size: 14px;
}

QPushButton:hover {
    background-color: #8be9fd;
    color: #282a36;
}
</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>20</number>
    </property>
    <item>
     <widget class="QLabel" name="lblTitle">
      <property name="font">
       <font>
        <pointsize>20</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>LSB Steganography - Decode</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="lblInputImage">
      <property name="text">
       <string>Input Image:</string>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLineEdit" name="txtInputImage"/>
      </item>
      <item>
       <widget class="QPushButton" name="btnSelectInput">
        <property name="text">
         <string>Select</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QPushButton" name="btnDecode">
      <property name="text">
       <string>Decode</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="lblDecodedText">
      <property name="text">
       <string>Decoded Text:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QTextEdit" name="txtDecodedText">
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="lblDecodedFilePath">
      <property name="text">
       <string>Decoded File Path:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="txtDecodedFilePath">
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="btnBack">
      <property name="text">
       <string>Back</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>